--- a/index.html
+++ b/index.html
@@ -118,6 +118,37 @@
             }
         }
         @media (max-width: 767px) {
+            body {
+                padding: 0.75rem;
+            }
+            #view-player {
+                gap: 1rem;
+            }
+            #control-panel {
+                gap: 0.75rem;
+                padding-left: 0;
+                padding-right: 0;
+            }
+            #control-panel [data-section="sleep"] button {
+                padding-top: 0.5rem;
+                padding-bottom: 0.5rem;
+                font-size: 0.65rem;
+            }
+            #control-panel [data-section="presets"] {
+                gap: 0.5rem;
+            }
+            #control-panel [data-section="presets"] .preset-btn {
+                height: 4.25rem;
+            }
+            #control-panel [data-section="transport"] {
+                height: 4.5rem;
+            }
+            #control-panel [data-section="transport"] button {
+                font-size: 1.5rem;
+            }
+            #control-panel [data-section="transport"] #play-btn {
+                font-size: 2rem;
+            }
             body[data-layout="split"] #view-player {
                 gap: 1rem;
             }
