--- a/index.html
+++ b/index.html
@@ -9,31 +9,15 @@
     <link href="https://fonts.cdnfonts.com/css/dseg7-classic" rel="stylesheet">
     <style>
         :root { 
-            --bg: #0a0c10; --bg-spot: #1e293b; --text: #e2e8f0; --accent: #10b981; --time-color: #f59e0b;
+            --bg: #0a0c10; --text: #e2e8f0; --accent: #10b981; --time-color: #f59e0b;
             --panel: rgba(30, 41, 59, 0.5); --glass: rgba(255, 255, 255, 0.03);
-        }
-        body[data-theme="classic"] {
-            --bg: #0a0c10; --bg-spot: #1e293b; --text: #e2e8f0; --accent: #10b981; --time-color: #f59e0b;
-            --panel: rgba(30, 41, 59, 0.5); --glass: rgba(255, 255, 255, 0.03);
-        }
-        body[data-theme="sunset"] {
-            --bg: #12090c; --bg-spot: #3b0a14; --text: #fde7d5; --accent: #fb923c; --time-color: #facc15;
-            --panel: rgba(84, 24, 36, 0.55); --glass: rgba(255, 255, 255, 0.05);
-        }
-        body[data-theme="neon"] {
-            --bg: #050711; --bg-spot: #0f172a; --text: #e0f2fe; --accent: #38bdf8; --time-color: #a78bfa;
-            --panel: rgba(15, 23, 42, 0.65); --glass: rgba(56, 189, 248, 0.08);
-        }
-        body[data-theme="glacier"] {
-            --bg: #050e12; --bg-spot: #0f2a35; --text: #e0f7ff; --accent: #22d3ee; --time-color: #38bdf8;
-            --panel: rgba(8, 40, 52, 0.6); --glass: rgba(34, 211, 238, 0.08);
         }
         .day-mode { 
-            --bg: #f8fafc; --bg-spot: #e2e8f0; --text: #1e293b; --accent: #059669; --time-color: #d97706;
+            --bg: #f8fafc; --text: #1e293b; --accent: #059669; --time-color: #d97706;
             --panel: rgba(226, 232, 240, 0.8); --glass: rgba(0, 0, 0, 0.05);
         }
         body { 
-            background: radial-gradient(circle at top right, var(--bg-spot), var(--bg)); 
+            background: radial-gradient(circle at top right, #1e293b, var(--bg)); 
             color: var(--text); font-family: 'Inter', sans-serif; transition: all 0.5s ease; 
         }
         .glass-card { background: var(--panel); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); border-radius: 2rem; }
@@ -78,77 +62,19 @@
             height: 100%;
             margin: 0;
         }
-        #progress-block { grid-area: progress; }
-        #volume-block { grid-area: volume; }
-        #sleep-block { grid-area: sleep; }
-        #preset-block { grid-area: presets; }
-        #transport-block { grid-area: transport; }
-        body[data-layout="alt"] #control-stack {
-            display: grid;
-            grid-template-columns: repeat(2, minmax(0, 1fr));
-            grid-template-areas:
-                "progress progress"
-                "sleep presets"
-                "transport presets"
-                "volume volume";
-            gap: 1.25rem;
-        }
-        body[data-layout="alt"] #preset-block .preset-btn { height: 4.5rem; }
-        body[data-layout="alt"] #sleep-block button { padding-top: 0.6rem; padding-bottom: 0.6rem; font-size: 0.65rem; }
-        body[data-layout="alt"] #transport-block { height: 5rem; }
-        body[data-layout="alt"] #transport-block button { font-size: 1.75rem; }
-        @media (max-width: 640px) {
-            body[data-layout="alt"] #control-stack {
-                grid-template-columns: 1fr;
-                grid-template-areas:
-                    "progress"
-                    "sleep"
-                    "presets"
-                    "transport"
-                    "volume";
-                gap: 0.75rem;
-            }
-            body[data-layout="alt"] #preset-block .preset-btn { height: 3.25rem; }
-            body[data-layout="alt"] #transport-block { height: 4.25rem; }
-        }
     </style>
 </head>
-<body class="h-screen flex flex-col overflow-hidden p-4 sm:p-6" data-theme="classic" data-layout="classic">
+<body class="h-screen flex flex-col overflow-hidden p-4 sm:p-6">
 
     <header class="flex justify-between items-center mb-6">
         <div>
             <h1 class="text-2xl font-bold tracking-tight">INFOTAINMENT <span class="text-emerald-500 font-light">4.3</span></h1>
         </div>
         <div class="flex gap-3">
-            <button onclick="toggleOptions()" id="options-toggle" class="p-3 rounded-full bg-white/5 border border-white/10">⚙️</button>
             <button onclick="toggleDayMode()" class="p-3 rounded-full bg-white/5 border border-white/10">☀️</button>
             <button onclick="toggleView('library')" class="px-6 py-2 rounded-2xl font-bold bg-emerald-500 text-black active:scale-95 transition-transform">LIBRARY</button>
         </div>
     </header>
-
-    <div id="options-panel" class="fixed top-20 right-6 z-40 hidden glass-card bg-black/60 p-4 w-64 flex flex-col gap-4 shadow-2xl">
-        <div class="flex items-center justify-between">
-            <div class="text-xs font-bold tracking-widest uppercase opacity-70">Layout & Theme</div>
-            <button onclick="toggleOptions()" class="text-xs opacity-60">Close</button>
-        </div>
-        <label class="flex flex-col gap-2 text-xs font-semibold uppercase tracking-widest opacity-70">
-            Layout
-            <select id="layout-select" class="bg-white/5 border border-white/10 rounded-xl p-2 text-sm">
-                <option value="classic">Classic</option>
-                <option value="alt">Studio</option>
-            </select>
-        </label>
-        <label class="flex flex-col gap-2 text-xs font-semibold uppercase tracking-widest opacity-70">
-            Theme
-            <select id="theme-select" class="bg-white/5 border border-white/10 rounded-xl p-2 text-sm">
-                <option value="classic">Classic Night</option>
-                <option value="sunset">Sunset Glow</option>
-                <option value="neon">Neon Pulse</option>
-                <option value="glacier">Glacier Ice</option>
-            </select>
-        </label>
-        <div class="text-[11px] opacity-60">Use the sun icon to jump to the bright day palette.</div>
-    </div>
 
     <main id="view-player" class="flex-1 flex flex-col gap-6">
         <div class="flex-none min-h-[7rem] sm:h-auto sm:flex-1 glass-card lcd-display flex flex-col justify-between relative overflow-hidden">
@@ -170,22 +96,22 @@
             </div>
         </div>
 
-        <div class="flex flex-col gap-6 px-2" id="control-stack">
-            <div class="sm:hidden flex flex-col gap-3" id="progress-block">
+        <div class="flex flex-col gap-6 px-2">
+            <div class="sm:hidden flex flex-col gap-3">
                 <span class="text-[10px] font-black opacity-30 tracking-tighter">PROGRESS</span>
                 <input type="range" id="seek-bar-mobile" class="seek-bar" value="0" step="1">
             </div>
 
-            <div class="hidden sm:flex items-center gap-6" id="volume-block">
+            <div class="hidden sm:flex items-center gap-6">
                 <span class="text-[10px] font-black opacity-30 tracking-tighter">VOL</span>
                 <input type="range" id="vol-control" class="vol-control" min="0" max="1" step="0.05" value="1">
             </div>
 
-            <div class="grid grid-cols-2 gap-3" id="sleep-block">
+            <div class="grid grid-cols-2 gap-3">
                 <button onclick="setSleepTimer(15)" class="glass-card bg-white/5 py-3 text-xs font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 15 mins</button>
                 <button onclick="setSleepTimer(30)" class="glass-card bg-white/5 py-3 text-xs font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 30 mins</button>
             </div>
-            <div class="grid grid-cols-3 sm:grid-cols-6 gap-3" id="preset-block">
+            <div class="grid grid-cols-3 sm:grid-cols-6 gap-3">
                 <button onpointerdown="handlePresetStart(1)" onpointerup="handlePresetEnd(1)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-1"><span class="text-xl font-bold">1</span><span class="preset-label truncate w-full px-2" id="label-1"></span></button>
                 <button onpointerdown="handlePresetStart(2)" onpointerup="handlePresetEnd(2)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-2"><span class="text-xl font-bold">2</span><span class="preset-label truncate w-full px-2" id="label-2"></span></button>
                 <button onpointerdown="handlePresetStart(3)" onpointerup="handlePresetEnd(3)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-3"><span class="text-xl font-bold">3</span><span class="preset-label truncate w-full px-2" id="label-3"></span></button>
@@ -194,7 +120,7 @@
                 <button onpointerdown="handlePresetStart(6)" onpointerup="handlePresetEnd(6)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-6"><span class="text-xl font-bold">6</span><span class="preset-label truncate w-full px-2" id="label-6"></span></button>
             </div>
 
-            <div class="flex gap-4 h-24 items-stretch" id="transport-block">
+            <div class="flex gap-4 h-24 items-stretch">
                 <div class="flex flex-1 gap-4">
                     <button onclick="smartSeek(-15)" class="flex-1 glass-card bg-white/5 text-3xl active:scale-95 transition-transform">⏮</button>
                     <button onclick="togglePlay()" id="play-btn" class="w-1/3 glass-card bg-emerald-500 text-black text-4xl shadow-xl active:scale-95 transition-transform">▶</button>
@@ -249,11 +175,6 @@
     const sleepDisplay = document.getElementById('sleep-timer-display');
     const defaultSleepText = sleepDisplay.textContent;
     const timeDisplay = document.getElementById('display-title');
-    const optionsPanel = document.getElementById('options-panel');
-    const themeSelect = document.getElementById('theme-select');
-    const layoutSelect = document.getElementById('layout-select');
-    const THEME_KEY = 'carstereo.theme.v1';
-    const LAYOUT_KEY = 'carstereo.layout.v1';
     function showModeMessage(message, timeout = 3000) {
         if (sleepEndTime) return;
         modeIndicator.textContent = message;
@@ -331,24 +252,6 @@
     function toggleView(v) {
         document.getElementById('overlay-library').classList.toggle('hidden', v !== 'library');
         if (v === 'library') renderLibrary();
-    }
-
-    function toggleOptions() {
-        optionsPanel.classList.toggle('hidden');
-    }
-
-    function applyTheme(theme) {
-        const value = theme || 'classic';
-        document.body.dataset.theme = value;
-        if (themeSelect) themeSelect.value = value;
-        localStorage.setItem(THEME_KEY, value);
-    }
-
-    function applyLayout(layout) {
-        const value = layout || 'classic';
-        document.body.dataset.layout = value;
-        if (layoutSelect) layoutSelect.value = value;
-        localStorage.setItem(LAYOUT_KEY, value);
     }
 
     function toggleManager() { 
@@ -570,12 +473,6 @@
     }
 
     async function init() {
-        const savedTheme = localStorage.getItem(THEME_KEY) || 'classic';
-        const savedLayout = localStorage.getItem(LAYOUT_KEY) || 'classic';
-        applyTheme(savedTheme);
-        applyLayout(savedLayout);
-        if (themeSelect) themeSelect.addEventListener('change', (e) => applyTheme(e.target.value));
-        if (layoutSelect) layoutSelect.addEventListener('change', (e) => applyLayout(e.target.value));
         const data = await sync('GET');
         if (data) { Object.assign(state, data); }
         const cachedLibrary = loadCachedLibrary();
